--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  intl: ^0.17.0
+  http: ^0.13.4
+  snack: ^2.0.0
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
