--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hosanalyst">
+    package="com.example.hosanalyst_admin">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="hosanalyst"
+        android:label="Hossanalyst Admin"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
