--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.0.13
   splash_screen_view: ^3.0.0
   cached_network_image: ^3.2.0
+  dropdown_below: ^1.0.3
+  table_calendar: ^3.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
